# OptimizedSTS

./: README.md  README.txt  fixforce.sh  fwd.bat  opt.bat
InitialFiles/: InitialControllerParameters.sto  STS_SeatConstraint.osim  SitToStand.sto
source/: CMakeLists.txt
source/Common/: ActuatorActivationProbe.cpp  ActuatorActivationProbe.h  CMAOptimizer.cpp  CMAOptimizer.h  CMakeLists.txt  ConstraintSlipPenaltyProbe.cpp  ConstraintSlipPenaltyProbe.h  CoordinateLimitForceProbe.cpp  CoordinateLimitForceProbe.h  EventHandlersAndReporters.h  MuscleLikeCoordinateActuator.cpp  MuscleLikeCoordinateActuator.h  RegisterTypes_sljCommon.cpp  RegisterTypes_sljCommon.h  VerticalGRFProbe.cpp  VerticalGRFProbe.h  cmaes.c  sljCommonDLL.h
source/Kinematics_Analysis/: AppState.xml  STS_Kinematics_dudt.sto  STS_Kinematics_q.sto  STS_Kinematics_u.sto  Setup.xml
source/nominal/: CMakeLists.txt  predictivesim_STS.cpp
