SET(KIT Common)
SET(UKIT COMMON)

# Define project
SET(SLJ_COMMON_LIBRARY_NAME slj${KIT})
SET(SLJ_COMMON_AUTHORS  "Carmichael_Ong-Ajay_Seth") 

ADD_DEFINITIONS(-DSLJ_COMMON_LIBRARY_NAME=${SLJ_COMMON_LIBRARY_NAME}
-DSLJ_COMMON_AUTHORS="${SLJ_COMMON_AUTHORS}"
-DSLJ_COMMON_TYPE="Shared")

FILE(GLOB SOURCE_FILES *.cpp *.c)
FILE(GLOB INCLUDE_FILES *.h)
SET_SOURCE_FILES_PROPERTIES( ${CMAKE_SOURCE_DIR}/Common/cmaes.c PROPERTIES LANGUAGE CXX )

SET(EXPORT_MACRO SLJ${UKIT}_EXPORTS)

LINK_LIBRARIES(${OSIM_LIBRARIES} ${SIMTK_COMMON_LIB} ${SIMTK_MATH_LIB} ${MATH_LIBS_TO_USE} ${MPI_LIBRARIES})
ADD_LIBRARY(slj${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

SET_TARGET_PROPERTIES(slj${KIT} PROPERTIES
   DEFINE_SYMBOL ${EXPORT_MACRO}
   PROJECT_LABEL "Libraries - slj${KIT}"
)